--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.2.3",
         "irazasyed/telegram-bot-sdk": "^3.4",
+        "laravel-notification-channels/discord": "^1.3",
         "laravel/framework": "^8.75",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "team-reflex/discord-php": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
